[gd_scene load_steps=4 format=3 uid="uid://b2ykdacd2wswg"]

[ext_resource type="Theme" uid="uid://jqhxocgoy8gg" path="res://addons/Tracker2D/position_info_box_theme.tres" id="1_j3wqo"]
[ext_resource type="Script" path="res://addons/Tracker2D/position_info_box.gd" id="1_jt23q"]
[ext_resource type="Script" path="res://addons/Tracker2D/rect.gd" id="3_a5vor"]

[node name="position_info_box" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
theme = ExtResource("1_j3wqo")
script = ExtResource("1_jt23q")

[node name="rect" type="Node2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.2, 0.2)
script = ExtResource("3_a5vor")

[node name="main_panel" type="PanelContainer" parent="."]
unique_name_in_owner = true
offset_left = 4.0
offset_top = 4.0
offset_right = 104.0
offset_bottom = 68.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="main_panel"]
offset_right = 119.0
offset_bottom = 97.0
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="main_panel/MarginContainer"]
offset_left = 5.0
offset_top = 5.0
offset_right = 114.0
offset_bottom = 92.0
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2

[node name="name_value" type="Label" parent="main_panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
offset_right = 109.0
offset_bottom = 11.0
text = "node_name"
horizontal_alignment = 1

[node name="position_separator" type="HSeparator" parent="main_panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 15.0
offset_right = 109.0
offset_bottom = 15.0
mouse_filter = 2

[node name="GridContainer" type="GridContainer" parent="main_panel/MarginContainer/VBoxContainer"]
offset_top = 19.0
offset_right = 109.0
offset_bottom = 45.0
mouse_filter = 2
columns = 2

[node name="position_label" type="Label" parent="main_panel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
offset_right = 33.0
offset_bottom = 11.0
text = "pos:"
horizontal_alignment = 2

[node name="position_value" type="Label" parent="main_panel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
offset_left = 37.0
offset_right = 109.0
offset_bottom = 11.0
text = "-123.0, 543.2"

[node name="global_position_label" type="Label" parent="main_panel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
offset_top = 15.0
offset_right = 33.0
offset_bottom = 26.0
text = "g-pos:"
horizontal_alignment = 2

[node name="global_position_value" type="Label" parent="main_panel/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
offset_left = 37.0
offset_top = 15.0
offset_right = 109.0
offset_bottom = 26.0
text = "-111.1, 111.1"

[node name="rotation_separator" type="HSeparator" parent="main_panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 49.0
offset_right = 109.0
offset_bottom = 49.0
mouse_filter = 2

[node name="GridContainer2" type="GridContainer" parent="main_panel/MarginContainer/VBoxContainer"]
offset_top = 53.0
offset_right = 109.0
offset_bottom = 79.0
mouse_filter = 2
columns = 2

[node name="rotation_label" type="Label" parent="main_panel/MarginContainer/VBoxContainer/GridContainer2"]
unique_name_in_owner = true
offset_right = 33.0
offset_bottom = 11.0
text = "rot:"
horizontal_alignment = 2

[node name="rotation_value" type="Label" parent="main_panel/MarginContainer/VBoxContainer/GridContainer2"]
unique_name_in_owner = true
offset_left = 37.0
offset_right = 70.0
offset_bottom = 11.0
text = "-123.0"

[node name="global_rotation_label" type="Label" parent="main_panel/MarginContainer/VBoxContainer/GridContainer2"]
unique_name_in_owner = true
offset_top = 15.0
offset_right = 33.0
offset_bottom = 26.0
text = "g-rot:"
horizontal_alignment = 2

[node name="global_rotation_value" type="Label" parent="main_panel/MarginContainer/VBoxContainer/GridContainer2"]
unique_name_in_owner = true
offset_left = 37.0
offset_top = 15.0
offset_right = 70.0
offset_bottom = 26.0
text = "-123.0"

[node name="property_separator" type="HSeparator" parent="main_panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 83.0
offset_right = 109.0
offset_bottom = 83.0
mouse_filter = 2

[node name="tracked_properties" type="VBoxContainer" parent="main_panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 87.0
offset_right = 109.0
offset_bottom = 87.0
mouse_filter = 2
